fixed win toggle bug and small alignements issues

--- a/canvas.css
+++ b/canvas.css
@@ -22,7 +22,7 @@
 .timer {
     border : 3px solid orange;
     margin : 0.5em;
-    padding : 0.3em 0.3em 0.8em 0.3em;
+    padding : 0.3em 0.3em 1em 0.3em;
     height : 1.8vh;
     background-color : white;
     width : 20%;
