--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ h1 {
 }
 
 #message-p {
-    padding-top : 0.7vw;
+    padding-top : 1vw;
     font-size : 1.6vw;
     margin : 0;
     height : 5vh;
